# IntelliDocAI

./: .env.example  README.md  ai_document_agent.py  document_generator.py  main.py  models.py  pdf_generator.py  pyproject.toml  web_interface.py
templates/: index.html  layout.html  status.html
tools/: __init__.py  save_tool.py  search_tool.py  wiki_tool.py
